<resources>
    <string name="app_name">HiiApp</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register_now">Register now</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="register">Register</string>
    <string name="have_an_account">Have an account?</string>
    <string name="login_here">Login here</string>
    <string name="next">Next</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="mobile_no">Mobile No</string>
    <string name="sign_up">Sign Up</string>
    <string name="otp">OTP</string>
    <string name="verify_otp">Verify OTP</string>
</resources>