<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white"
    android:layout_gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_300sdp"
        android:foregroundGravity="center"
        android:src="@drawable/login2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="45dp"
        android:orientation="vertical"
        tools:ignore="UselessLeaf">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textEditEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/_260sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/email_address"
            android:textColorHint="@color/secondary"
            app:endIconMode="clear_text"
            app:endIconTint="@color/secondary"
            app:errorEnabled="true"
            app:errorTextColor="@color/error"
            app:boxCornerRadiusBottomEnd="@dimen/_8sdp"
            app:boxCornerRadiusBottomStart="@dimen/_8sdp"
            app:boxCornerRadiusTopEnd="@dimen/_8sdp"
            app:boxCornerRadiusTopStart="@dimen/_8sdp"
            app:boxStrokeColor="@color/primary"
            app:startIconDrawable="@drawable/ic_mail"
            app:startIconTint="@color/secondary">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/ubunturegular"
                android:inputType="textEmailAddress"
                android:textStyle="bold"
                android:letterSpacing="0.1"
                android:textColor="@color/secondary"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textEditPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/_260sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_5sdp"
            android:hint="@string/password"
            android:textColorHint="@color/secondary"
            app:errorEnabled="true"
            app:errorTextColor="@color/error"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/secondary"
            app:boxCornerRadiusBottomEnd="@dimen/_8sdp"
            app:boxCornerRadiusBottomStart="@dimen/_8sdp"
            app:boxCornerRadiusTopEnd="@dimen/_8sdp"
            app:boxCornerRadiusTopStart="@dimen/_8sdp"
            app:boxStrokeColor="@color/primary"
            app:startIconDrawable="@drawable/ic_lock"
            app:startIconTint="@color/secondary">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/ubunturegular"
                android:inputType="textPassword"
                android:textStyle="bold"
                android:textColor="@color/secondary"
                android:letterSpacing="0.1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30sdp"
            android:fontFamily="@font/ubunturegular"
            android:text="@string/forgot_your_password"
            android:textColor="@color/primary"
            android:textSize="@dimen/_13ssp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginBtn"
            android:layout_width="@dimen/_260sdp"
            android:layout_height="@dimen/_45sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_3sdp"
            android:clickable="false"
            android:fontFamily="@font/ubuntubold"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp"
            app:cornerRadius="@dimen/_8sdp" />

        <TextView
            android:id="@+id/textDontHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/ubunturegular"
            android:gravity="center"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/secondary"
            android:textSize="@dimen/_13ssp" />

        <TextView
            android:id="@+id/textRegister"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/ubunturegular"
            android:gravity="center"
            android:text="@string/register_now"
            android:textColor="@color/primary"
            android:textSize="@dimen/_13ssp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_3sdp">
        <ImageView
            android:id="@+id/signInUsingPhone"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:src="@drawable/phone"
            android:layout_marginTop="@dimen/_3sdp"
            tools:ignore="RtlSymmetry" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>