<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".loginUsingPhone"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_300sdp"
        android:foregroundGravity="center"
        android:src="@drawable/mobilelogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="45dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textEditNumber"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/_260sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/mobile_no"
            app:prefixText="+91"
            app:endIconMode="clear_text"
            app:endIconTint="@color/secondary"
            app:errorEnabled="true"
            app:errorTextColor="@color/error"
            app:prefixTextColor="@color/secondary"
            android:textColorHint="@color/secondary"
            app:boxCornerRadiusBottomEnd="@dimen/_8sdp"
            app:boxCornerRadiusBottomStart="@dimen/_8sdp"
            app:boxCornerRadiusTopEnd="@dimen/_8sdp"
            app:boxCornerRadiusTopStart="@dimen/_8sdp"
            app:boxStrokeColor="@color/primary"
            app:startIconDrawable="@drawable/ic_phone"
            app:startIconTint="@color/secondary">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/ubunturegular"
                android:textColor="@color/secondary"
                android:textStyle="bold"
                android:inputType="phone"
                android:maxLength="10"
                android:letterSpacing="0.7"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/registerBtn"
            android:layout_width="@dimen/_260sdp"
            android:layout_height="@dimen/_45sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_5sdp"
            android:clickable="false"
            android:fontFamily="@font/ubuntubold"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp"
            app:cornerRadius="@dimen/_8sdp" />

        <TextView
            android:id="@+id/textDontHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/ubunturegular"
            android:gravity="center"
            android:text="@string/already_have_an_account"
            android:textColor="@color/secondary"
            android:textSize="@dimen/_13ssp" />

        <TextView
            android:id="@+id/textBtnLogin"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/ubunturegular"
            android:gravity="center"
            android:text="@string/login_here"
            android:textColor="@color/primary"
            android:textSize="@dimen/_13ssp" />
    </LinearLayout>
</RelativeLayout>