<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registerActivity"
    android:background="@color/white"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_300sdp"
        android:foregroundGravity="center"
        android:src="@drawable/registration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="45dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textEditEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/_260sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/email_address"
            android:textColorHint="@color/secondary"
            app:errorEnabled="true"
            app:errorTextColor="@color/error"
            app:boxCornerRadiusBottomEnd="@dimen/_8sdp"
            app:boxCornerRadiusBottomStart="@dimen/_8sdp"
            app:boxCornerRadiusTopEnd="@dimen/_8sdp"
            app:boxCornerRadiusTopStart="@dimen/_8sdp"
            app:boxStrokeColor="@color/primary"
            app:startIconDrawable="@drawable/ic_mail"
            app:startIconTint="@color/secondary">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/ubunturegular"
                android:textColor="@color/secondary"
                android:inputType="textEmailAddress"
                android:textStyle="bold"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/registerBtn"
            android:layout_width="@dimen/_260sdp"
            android:layout_height="@dimen/_45sdp"
            android:layout_gravity="center"
            android:clickable="false"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/ubuntubold"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp"
            app:cornerRadius="@dimen/_8sdp" />

        <TextView
            android:id="@+id/textDontHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/ubunturegular"
            android:gravity="center"
            android:text="@string/already_have_an_account"
            android:textColor="@color/secondary"
            android:textSize="@dimen/_13ssp" />

        <TextView
            android:id="@+id/textBtnLogin"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/ubunturegular"
            android:gravity="center"
            android:text="@string/login_here"
            android:textColor="@color/primary"
            android:textSize="@dimen/_13ssp" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_3sdp">
            <ImageView
                android:id="@+id/signInUsingPhone"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:src="@drawable/phone"
                android:layout_marginTop="@dimen/_3sdp"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>